--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
     <div class="container-fluid">
         <div class="row justify-content-md-center">
             <div class="col-md-auto">
-                <div class="logo justify-content-center"><img src="Assets/Logo.png" alt="" srcset="" width="100%" height="100%">
-                </div>
+                <!-- <div class="logo justify-content-center"><img src="Assets/Logo.png" alt="" srcset="" width="100%" height="100%"> -->
             </div>
         </div>
+    </div>
     </div>
     <!--================ End Header Area =================-->
 
@@ -57,7 +57,7 @@
                                 <div class="col-6 col-md-4">
                                     <div class="box_main">
                                         <h4 class="shirt_text">Prachi Comic</h4>
-                                        <p class="price_text">Just for<span style="color: #262626;">Rs. 1</span>
+                                        <p class="price_text">Just for<span style="color: #262626;"><br>Rs. 1</span>
                                         </p>
                                         <div class="electronic_img"><img src="Assets/Logo2.png" width="100%" height="100%"></div>
                                         <div class="btn_main">
@@ -69,7 +69,7 @@
                                 <div class="col-6 col-md-4">
                                     <div class="box_main">
                                         <h4 class="shirt_text">Jungle Book</h4>
-                                        <p class="price_text">Just for<span style="color: #262626;">Rs. 1</span>
+                                        <p class="price_text">Just for<span style="color: #262626;"><br>Rs. 1</span>
                                         </p>
                                         <div class="electronic_img"><img src="Assets/Logo2.png" width="100%" height="100%"></div>
                                         <div class="btn_main">
@@ -81,7 +81,7 @@
                                 <div class="col-6 col-md-4">
                                     <div class="box_main">
                                         <h4 class="shirt_text">Jungle Book</h4>
-                                        <p class="price_text">Just for<span style="color: #262626;">Rs. 1</span>
+                                        <p class="price_text">Just for<span style="color: #262626;"><br>Rs. 1</span>
                                         </p>
                                         <div class="electronic_img"><img src="Assets/Logo2.png" width="100%" height="100%"></div>
                                         <div class="btn_main">
@@ -102,7 +102,7 @@
                                 <div class="col-6 col-md-4">
                                     <div class="box_main">
                                         <h4 class="shirt_text">Music</h4>
-                                        <p class="price_text">Just for<span style="color: #262626;">Rs. 1</span>
+                                        <p class="price_text">Just for<span style="color: #262626;"><br>Rs. 1</span>
                                         </p>
                                         <div class="electronic_img"><img src="Assets/Logo2.png" width="100%" height="100%"></div>
                                         <div class="btn_main">
@@ -114,7 +114,7 @@
                                 <div class="col-6 col-md-4">
                                     <div class="box_main">
                                         <h4 class="shirt_text">Quiz</h4>
-                                        <p class="price_text">Just for<span style="color: #262626;">Rs. 1</span>
+                                        <p class="price_text">Just for<span style="color: #262626;"><br>Rs. 1</span>
                                         </p>
                                         <div class="electronic_img"><img src="Assets/Logo2.png" width="100%" height="100%"></div>
                                         <div class="btn_main">
@@ -126,7 +126,7 @@
                                 <div class="col-6 col-md-4">
                                     <div class="box_main">
                                         <h4 class="shirt_text">Quiz</h4>
-                                        <p class="price_text">Just for<span style="color: #262626;">Rs. 1</span>
+                                        <p class="price_text">Just for<span style="color: #262626;"><br>Rs. 1</span>
                                         </p>
                                         <div class="electronic_img"><img src="Assets/Logo2.png" width="100%" height="100%"></div>
                                         <div class="btn_main">
