--- a/index.html
+++ b/index.html
@@ -16,11 +16,16 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
+    <!-- Social Media icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+
+
     <!-- ========Main Sheets============= -->
     <link rel="stylesheet" href="/css/header.css">
     <link rel="stylesheet" href="/css/slider.css">
-
-
+    <link rel="stylesheet" href="/css/footer.css">
 </head>
 
 <body>
@@ -38,9 +43,10 @@
     <!-- Start Main Landing Area -->
     <div class="container-fluid landing-page">
         <div class="row justify-content-md-center">
-            <p class="sub-text">Welcome to,</p>
-            <div class="logo-typo"><img src="Assets/typography_toonland_white.png" alt="" srcset="" width="100%" height="100%"></div>
-            <div class="hero"><img src="Assets/home_without_logo.png" alt="" srcset="" width="100%" height="100%"></div>
+            <div class="hero"><img src="Assets/home_without_logo.png" alt="" srcset="" width="100%" height="100%">
+                <p class="sub-text carousel-caption">Welcome to,</p>
+                <img src="Assets/typography_toonland_white.png" alt="" srcset="" width="100%" height="100%" class="logo-typo carousel-caption justify-content-md-center mx-auto">
+            </div>
         </div>
     </div>
     <!-- End Main Landing Area -->
@@ -161,6 +167,78 @@
     </script>
 
     <!-- End Library section -->
+
+    <!-- ========== Start Footer ============== -->
+    <div class="footer">
+        <footer>
+            <div class="container my-5">
+                <div class="row">
+                    <div class="col-md-6 item text">
+                        <h3>Why did we start Toonland?</h3>
+                        <p>The world, as we see it, has changed. The way children learn and interact has also changed. Comic based learning is the new trend. Toonland is the perfect place for all of this because all of our characters will help your child
+                            to grow in the way we did.
+                        </p>
+                    </div>
+
+                    <div class="col-sm-6 col-md-3 item">
+                        <h3>Services</h3>
+                        <ul>
+                            <li><a href="#">Toon Music</a></li>
+                            <li>
+                                <a href="#">Toon Library</a>
+                            </li>
+                            <li>
+                                <a href="#">Toon Mall</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-sm-6 col-md-3 item">
+                        <h3>About</h3>
+                        <ul>
+                            <li>
+                                <a href="#">Toonland Treasure</a>
+                            </li>
+                            <li>
+                                <a href="#">Tubby's Hospital</a>
+                            </li>
+                            <li>
+                                <a href="#">Toon Theater</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-md-6 item text">
+                        <h3>Company Name</h3>
+                        <p>Praesent sed lobortis mi. Suspendisse vel placerat ligula. Vivamus ac sem lacus. Ut vehicula rhoncus elementum. Etiam quis tristique lectus. Aliquam in arcu eget velit pulvinar dictum vel in justo.</p>
+                    </div>
+
+
+                </div>
+                <div class="col justify-content-md-center" align="center">
+                    <h2>Brand powered by Propelling Stories.
+                    </h2>
+                </div>
+
+                <div class="row" align="center">
+                    <div class="col powered">
+                        <img src="/Assets/Logo2.png" alt="" srcset="" width="100%" height="100%">
+                    </div>
+                    <div class="col powered" align="center">
+                        <img src="/Assets/Logo2.png" alt="" srcset="" width="100%" height="100%">
+                    </div>
+                    <div class="col powered">
+                        <img src="/Assets/Logo2.png" alt="" srcset="" width="100%" height="100%">
+                    </div>
+                    <div class="col powered" align="center">
+                        <img src="/Assets/Logo2.png" alt="" srcset="" width="100%" height="100%">
+                    </div>
+                </div>
+
+                <div class="col item social"><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-instagram"></i></a></div>
+                <p class="copyright">Toonland 2022 all rights reserved.</p>
+            </div>
+        </footer>
+    </div>
+    <!-- ========== End Footer ============== -->
 
 </body>
 
