design of footer

--- a/index.html
+++ b/index.html
@@ -171,17 +171,17 @@
     <!-- ========== Start Footer ============== -->
     <div class="footer">
         <footer>
-            <div class="container my-5">
+            <div class="container my-5 mx-auto">
                 <div class="row">
-                    <div class="col-md-6 item text">
+                    <div class="col-4 item text">
                         <h3>Why did we start Toonland?</h3>
                         <p>The world, as we see it, has changed. The way children learn and interact has also changed. Comic based learning is the new trend. Toonland is the perfect place for all of this because all of our characters will help your child
                             to grow in the way we did.
                         </p>
                     </div>
 
-                    <div class="col-sm-6 col-md-3 item">
-                        <h3>Services</h3>
+                    <div class="col order-12 item" align="center">
+                        <h3>Toonland</h3>
                         <ul>
                             <li><a href="#">Toon Music</a></li>
                             <li>
@@ -190,11 +190,6 @@
                             <li>
                                 <a href="#">Toon Mall</a>
                             </li>
-                        </ul>
-                    </div>
-                    <div class="col-sm-6 col-md-3 item">
-                        <h3>About</h3>
-                        <ul>
                             <li>
                                 <a href="#">Toonland Treasure</a>
                             </li>
@@ -206,9 +201,12 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="col-md-6 item text">
-                        <h3>Company Name</h3>
-                        <p>Praesent sed lobortis mi. Suspendisse vel placerat ligula. Vivamus ac sem lacus. Ut vehicula rhoncus elementum. Etiam quis tristique lectus. Aliquam in arcu eget velit pulvinar dictum vel in justo.</p>
+
+
+
+                    <div class="col-4 item text" style="padding-left: 2rem;">
+                        <h3>Message from CEO</h3>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel placeat rerum numquam quaerat illum. Nostrum, quod molestiae? Aspernatur deserunt porro inventore rem temporibus nemo optio molestias blanditiis aut repellat. Ea?</p>
                     </div>
 
 
@@ -233,7 +231,12 @@
                     </div>
                 </div>
 
-                <div class="col item social"><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-instagram"></i></a></div>
+                <div class="col-sm-6 col-md-3 item social mx-auto">
+                    <a href="#"><i class="icon ion-social-facebook"></i></a>
+                    <a href="#"><i class="icon ion-social-twitter"></i></a>
+                    <a href="#"><i class="icon ion-social-snapchat"></i></a>
+                    <a href="#"><i class="icon ion-social-instagram"></i></a>
+                </div>
                 <p class="copyright">Toonland 2022 all rights reserved.</p>
             </div>
         </footer>
