--- a/index.html
+++ b/index.html
@@ -21,11 +21,16 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
 
+    <!-- Sidebar CDN -->
+    <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css'>
 
     <!-- ========Main Sheets============= -->
     <link rel="stylesheet" href="/css/header.css">
     <link rel="stylesheet" href="/css/slider.css">
     <link rel="stylesheet" href="/css/footer.css">
+    <link rel="stylesheet" href="/css/sidebar.css">
+
+
 </head>
 
 <body>
@@ -44,12 +49,30 @@
     <div class="container-fluid landing-page">
         <div class="row justify-content-md-center">
             <div class="hero"><img src="Assets/home_without_logo.png" alt="" srcset="" width="100%" height="100%">
-                <p class="sub-text carousel-caption">Welcome to,</p>
+                <p class="sub-text carousel-caption">Welcome To</p>
                 <img src="Assets/typography_toonland_white.png" alt="" srcset="" width="100%" height="100%" class="logo-typo carousel-caption justify-content-md-center mx-auto">
             </div>
         </div>
     </div>
     <!-- End Main Landing Area -->
+
+    <!-- Start Sidebar -->
+    <div class="s-soft" id="right">
+        <a href="/" class="s-item facebook">
+            <span class="fa fa-facebook"></span>
+        </a>
+        <a href="/" class="s-item twitter">
+            <span class="fa fa-twitter"></span>
+        </a>
+        <a href="/" class="s-item linkedin">
+            <span class="fa fa-linkedin"></span>
+        </a>
+        <a href="/" class="s-item instagram">
+            <span class="fa fa-instagram"></span>
+        </a>
+    </div>
+
+    <!-- End Sidebar -->
 
     <!-- Start Library section -->
     <div class="fashion_section">
@@ -171,75 +194,46 @@
     <!-- ========== Start Footer ============== -->
     <div class="footer">
         <footer>
-            <div class="container my-5 mx-auto">
+            <div class="container">
                 <div class="row">
-                    <div class="col-4 item text">
+                    <div class="col item text">
                         <h3>Why did we start Toonland?</h3>
-                        <p>The world, as we see it, has changed. The way children learn and interact has also changed. Comic based learning is the new trend. Toonland is the perfect place for all of this because all of our characters will help your child
-                            to grow in the way we did.
-                        </p>
-                    </div>
-
-                    <div class="col order-12 item" align="center">
-                        <h3>Toonland</h3>
-                        <ul>
-                            <li><a href="#">Toon Music</a></li>
-                            <li>
-                                <a href="#">Toon Library</a>
-                            </li>
-                            <li>
-                                <a href="#">Toon Mall</a>
-                            </li>
-                            <li>
-                                <a href="#">Toonland Treasure</a>
-                            </li>
-                            <li>
-                                <a href="#">Tubby's Hospital</a>
-                            </li>
-                            <li>
-                                <a href="#">Toon Theater</a>
-                            </li>
-                        </ul>
-                    </div>
-
-
-
-                    <div class="col-4 item text" style="padding-left: 2rem;">
                         <h3>Message from CEO</h3>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel placeat rerum numquam quaerat illum. Nostrum, quod molestiae? Aspernatur deserunt porro inventore rem temporibus nemo optio molestias blanditiis aut repellat. Ea?</p>
                     </div>
-
-
+                    <div class="col-6 item text mx-auto">
+                        <div class="powered mx-auto" align="center">
+                            <h3>Brand powered by</h3>
+                            <img src="/Assets/propelling logo.png " alt=" " srcset=" " width="100% " height="100% ">
+                            <div class="item social mx-auto ">
+                                <a href="# "><i class="icon ion-social-facebook "></i></a>
+                                <a href="# "><i class="icon ion-social-twitter "></i></a>
+                                <a href="# "><i class="icon ion-social-snapchat "></i></a>
+                                <a href="# "><i class="icon ion-social-instagram "></i></a>
+                            </div>
+                            <p class="copyright ">Toonland 2022 all rights reserved.</p>
+                        </div>
+                    </div>
+                    <div class="col"></div>
                 </div>
-                <div class="col justify-content-md-center" align="center">
-                    <h2>Brand powered by Propelling Stories.
-                    </h2>
-                </div>
-
-                <div class="row" align="center">
-                    <div class="col powered">
-                        <img src="/Assets/Logo2.png" alt="" srcset="" width="100%" height="100%">
-                    </div>
-                    <div class="col powered" align="center">
-                        <img src="/Assets/Logo2.png" alt="" srcset="" width="100%" height="100%">
-                    </div>
-                    <div class="col powered">
-                        <img src="/Assets/Logo2.png" alt="" srcset="" width="100%" height="100%">
-                    </div>
-                    <div class="col powered" align="center">
-                        <img src="/Assets/Logo2.png" alt="" srcset="" width="100%" height="100%">
-                    </div>
-                </div>
-
-                <div class="col-sm-6 col-md-3 item social mx-auto">
-                    <a href="#"><i class="icon ion-social-facebook"></i></a>
-                    <a href="#"><i class="icon ion-social-twitter"></i></a>
-                    <a href="#"><i class="icon ion-social-snapchat"></i></a>
-                    <a href="#"><i class="icon ion-social-instagram"></i></a>
-                </div>
-                <p class="copyright">Toonland 2022 all rights reserved.</p>
             </div>
-        </footer>
+            <div class="links mx-auto" align="center">
+                <ul>
+                    <li id="music">
+                        <h3>
+                            <a href="#">Toon Music</a>
+                        </h3>
+                    </li>
+                    <li id="library">
+                        <h3><a href="#">Toon Library</a> </h3>
+                    </li>
+                    <li id="mall">
+                        <h3><a href="#">Toon Mall</a> </h3>
+                    </li>
+                    <li id="treasure">
+                        <h3><a href="#">Toonland Treasure</a> </h3>
+                    </li>
+                </ul>
+            </div>
     </div>
     <!-- ========== End Footer ============== -->
 
