--- a/index.html
+++ b/index.html
@@ -9,12 +9,19 @@
 
     <!-- ========Bootstrap Links============= -->
     <!-- BootStarp CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
     <!-- Bootstrap Js -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js"
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
 
     <!-- Social Media icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
@@ -45,18 +52,19 @@
     </div>
     <!--================ End Header Area =================-->
 
-    <!-- Start Main Landing Area -->
+    <!--========== Start Main Landing Area ================-->
     <div class="container-fluid landing-page">
         <div class="row justify-content-md-center">
             <div class="hero"><img src="Assets/home_without_logo.png" alt="" srcset="" width="100%" height="100%">
                 <p class="sub-text carousel-caption">Welcome To</p>
-                <img src="Assets/typography_toonland_white.png" alt="" srcset="" width="100%" height="100%" class="logo-typo carousel-caption justify-content-md-center mx-auto">
+                <img src="Assets/typography_toonland_white.png" alt="" srcset="" width="100%" height="100%"
+                    class="logo-typo carousel-caption justify-content-md-center mx-auto">
             </div>
         </div>
     </div>
-    <!-- End Main Landing Area -->
+    <!--========== End Main Landing Area ==========-->
 
-    <!-- Start Sidebar -->
+    <!--========== Start Sidebar ==========-->
     <div class="s-soft" id="right">
         <a href="/" class="s-item facebook">
             <span class="fa fa-facebook"></span>
@@ -72,9 +80,9 @@
         </a>
     </div>
 
-    <!-- End Sidebar -->
+    <!--====== End Sidebar ========-->
 
-    <!-- Start Library section -->
+    <!--====== Start Library section =========-->
     <div class="fashion_section">
         <div id="electronic_main_slider" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
@@ -88,7 +96,8 @@
                                         <h4 class="shirt_text">Prachi Comic</h4>
                                         <p class="price_text">Just for<span style="color: #262626;"><br>Rs. 1</span>
                                         </p>
-                                        <div class="electronic_img"><img src="Assets/Logo2.png" width="100%" height="100%"></div>
+                                        <div class="electronic_img"><img src="Assets/Logo2.png" width="100%"
+                                                height="100%"></div>
                                         <div class="btn_main">
                                             <div class="buy_bt"><a href="#">Buy Now</a></div>
                                             <div class="seemore_bt"><a href="#">See More</a></div>
@@ -100,7 +109,8 @@
                                         <h4 class="shirt_text">Jungle Book</h4>
                                         <p class="price_text">Just for<span style="color: #262626;"><br>Rs. 1</span>
                                         </p>
-                                        <div class="electronic_img"><img src="Assets/Logo2.png" width="100%" height="100%"></div>
+                                        <div class="electronic_img"><img src="Assets/Logo2.png" width="100%"
+                                                height="100%"></div>
                                         <div class="btn_main">
                                             <div class="buy_bt"><a href="#">Buy Now</a></div>
                                             <div class="seemore_bt"><a href="#">See More</a></div>
@@ -112,7 +122,8 @@
                                         <h4 class="shirt_text">Jungle Book</h4>
                                         <p class="price_text">Just for<span style="color: #262626;"><br>Rs. 1</span>
                                         </p>
-                                        <div class="electronic_img"><img src="Assets/Logo2.png" width="100%" height="100%"></div>
+                                        <div class="electronic_img"><img src="Assets/Logo2.png" width="100%"
+                                                height="100%"></div>
                                         <div class="btn_main">
                                             <div class="buy_bt"><a href="#">Buy Now</a></div>
                                             <div class="seemore_bt"><a href="#">See More</a></div>
@@ -133,7 +144,8 @@
                                         <h4 class="shirt_text">Music</h4>
                                         <p class="price_text">Just for<span style="color: #262626;"><br>Rs. 1</span>
                                         </p>
-                                        <div class="electronic_img"><img src="Assets/Logo2.png" width="100%" height="100%"></div>
+                                        <div class="electronic_img"><img src="Assets/Logo2.png" width="100%"
+                                                height="100%"></div>
                                         <div class="btn_main">
                                             <div class="buy_bt"><a href="#">Buy Now</a></div>
                                             <div class="seemore_bt"><a href="#">See More</a></div>
@@ -145,7 +157,8 @@
                                         <h4 class="shirt_text">Quiz</h4>
                                         <p class="price_text">Just for<span style="color: #262626;"><br>Rs. 1</span>
                                         </p>
-                                        <div class="electronic_img"><img src="Assets/Logo2.png" width="100%" height="100%"></div>
+                                        <div class="electronic_img"><img src="Assets/Logo2.png" width="100%"
+                                                height="100%"></div>
                                         <div class="btn_main">
                                             <div class="buy_bt"><a href="#">Buy Now</a></div>
                                             <div class="seemore_bt"><a href="#">See More</a></div>
@@ -157,7 +170,8 @@
                                         <h4 class="shirt_text">Quiz</h4>
                                         <p class="price_text">Just for<span style="color: #262626;"><br>Rs. 1</span>
                                         </p>
-                                        <div class="electronic_img"><img src="Assets/Logo2.png" width="100%" height="100%"></div>
+                                        <div class="electronic_img"><img src="Assets/Logo2.png" width="100%"
+                                                height="100%"></div>
                                         <div class="btn_main">
                                             <div class="buy_bt"><a href="#">Buy Now</a></div>
                                             <div class="seemore_bt"><a href="#">See More</a></div>
@@ -189,7 +203,15 @@
         }
     </script>
 
-    <!-- End Library section -->
+    <!--========== End Library section ============-->
+
+    <!-- ===========Start Take a tour ===========-->
+    <div class="container">
+        <div class="col mx-auto" align="center">
+            <a href="/tour.html"><img src="/Assets/take a tour button.png" alt="" srcset=""></a>
+        </div>
+    </div>
+    <!-- ===========End Take a tour ===========-->
 
     <!-- ========== Start Footer ============== -->
     <div class="footer">
@@ -210,7 +232,7 @@
                                 <a href="# "><i class="icon ion-social-snapchat "></i></a>
                                 <a href="# "><i class="icon ion-social-instagram "></i></a>
                             </div>
-                            <p class="copyright ">Toonland 2022 all rights reserved.</p>
+                            <p class="copyright ">&#169;Toonland 2022 all rights reserved.</p>
                         </div>
                     </div>
                     <div class="col"></div>
