--- a/characterSheet.html
+++ b/characterSheet.html
@@ -34,9 +34,22 @@
     <!-- ========Main Sheets============= -->
     <link rel="stylesheet" href="/css/footer.css">
     <link rel="stylesheet" href="/css/characterSheet.css">
+    <link rel="stylesheet" href="/css/header.css">
 </head>
 
 <body>
+    <!--================ Start Header Area =================-->
+    <div class="container-fluid">
+        <div class="row justify-content-md-center">
+            <div class="col-md-auto">
+                <div class="logo justify-content-center"><a href="index.html"> <img src="Assets/Logo.png" alt=""
+                            srcset="" width="100%" height="100%"></a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--================ End Header Area =================-->
+
     <!--======== Start comic cards =========-->
     <div class="container comic-card">
         <div class="row mx-auto justify-content-center">
@@ -44,7 +57,7 @@
                 <div class="card text-center border-0" style="width: 12rem;">
                     <img src="/Assets/comic-dummy-cover-page.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <a href="/Assets/final year syllabus.pdf" class="btn btn-primary" download="Comic">Download</a>
+                        <a href="/subscriptionForm.html" class="btn btn-primary">Download</a>
                     </div>
                 </div>
             </div>
@@ -53,7 +66,7 @@
                 <div class="card text-center border-0" style="width: 12rem;">
                     <img src="/Assets/comic-dummy-cover-page.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <a href="/Assets/final year syllabus.pdf" class="btn btn-primary" download="Comic">Download</a>
+                        <a href="/subscriptionForm.html" class="btn btn-primary">Download</a>
                     </div>
                 </div>
             </div>
@@ -62,7 +75,7 @@
                 <div class="card text-center text-center border-0" style="width: 12rem;">
                     <img src="/Assets/comic-dummy-cover-page.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <a href="/Assets/final year syllabus.pdf" class="btn btn-primary" download="Comic">Download</a>
+                        <a href="/subscriptionForm.html" class="btn btn-primary">Download</a>
                     </div>
                 </div>
             </div>
@@ -71,7 +84,7 @@
                 <div class="card text-center border-0" style="width: 12rem;">
                     <img src="/Assets/comic-dummy-cover-page.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <a href="/Assets/final year syllabus.pdf" class="btn btn-primary" download="Comic">Download</a>
+                        <a href="/subscriptionForm.html" class="btn btn-primary">Download</a>
                     </div>
                 </div>
             </div>
