--- a/download.html
+++ b/download.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Toonland - Tour</title>
+    <title>ToonLand - Charactersheet</title>
 
     <!-- ========Bootstrap Links============= -->
     <!-- BootStarp CSS -->
@@ -33,7 +33,7 @@
 
     <!-- ========Main Sheets============= -->
     <link rel="stylesheet" href="/css/footer.css">
-    <link rel="stylesheet" href="/css/tour.css">
+    <link rel="stylesheet" href="/css/characterSheet.css">
     <link rel="stylesheet" href="/css/header.css">
 </head>
 
@@ -43,75 +43,55 @@
         <div class="row justify-content-md-center">
             <div class="col-md-auto">
                 <div class="logo justify-content-center">
-                    <a href="index.html"></a><img src="Assets/Logo.png" alt="" srcset="" width="100%" height="100%">
+                    <a href="index.html"> <img src="Assets/Logo.png" alt="" srcset="" width="100%" height="100%"></a>
                 </div>
             </div>
         </div>
     </div>
     <!--================ End Header Area =================-->
 
-    <!-- ========== Start video player ========-->
-    <div class="container">
-        <div class="row">
-            <div class="col-4" align="right">
-                <video width="420" height="240" autoplay muted class="tourVideo">
-                    <source src="/Assets/home_video.MP4" type="video/mp4">
-                </video>
+    <!--======== Start comic cards =========-->
+    <div class="container comic-card">
+        <div class="row mx-auto justify-content-center">
+            <div class="col">
+                <div class="card text-center border-0" style="width: 12rem;">
+                    <img src="/Assets/comic-dummy-cover-page.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <a href="/Assets/final year syllabus.pdf" class="btn btn-primary" download="Comic">Download</a>
+                    </div>
+                </div>
             </div>
-            <div class="col-8">
 
+            <div class="col">
+                <div class="card text-center border-0" style="width: 12rem;">
+                    <img src="/Assets/comic-dummy-cover-page.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <a href="/Assets/final year syllabus.pdf" class="btn btn-primary" download="Comic">Download</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="card text-center text-center border-0" style="width: 12rem;">
+                    <img src="/Assets/comic-dummy-cover-page.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <a href="/Assets/final year syllabus.pdf" class="btn btn-primary" download="Comic">Download</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="card text-center border-0" style="width: 12rem;">
+                    <img src="/Assets/comic-dummy-cover-page.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <a href="/Assets/final year syllabus.pdf" class="btn btn-primary" download="Comic">Download</a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-    <!-- ========== End video player ========-->
 
-    <!--=========== Start character cards ========-->
-    <div class="container character-card" align="center">
-        <div class="row mx-auto justify-content-center" align="center">
-            <a href="/characterSheet.html">
-                <div class="col mx-auto">
-                    <div class="card text-white border-0">
-                        <img src="/Assets/character-card.png" class="card-img" alt="...">
-                        <div class="card-img-overlay">
-                            <!-- <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                            additional content. This content is a little bit longer.</p>
-                        <p class="card-text">Last updated 3 mins ago</p> -->
-                        </div>
-                    </div>
-                </div>
-            </a>
 
-            <a href="">
-                <div class="col mx-auto">
-                    <div class="card text-white border-0">
-                        <img src="/Assets/character-card.png" class="card-img" alt="...">
-                        <div class="card-img-overlay">
-                            <!-- <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                            additional content. This content is a little bit longer.</p>
-                        <p class="card-text">Last updated 3 mins ago</p> -->
-                        </div>
-                    </div>
-                </div>
-            </a>
-
-            <a href="">
-                <div class="col mx-auto">
-                    <div class="card text-white border-0">
-                        <img src="/Assets/character-card.png" class="card-img" alt="...">
-                        <div class="card-img-overlay">
-                            <!-- <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                            additional content. This content is a little bit longer.</p>
-                        <p class="card-text">Last updated 3 mins ago</p> -->
-                        </div>
-                    </div>
-                </div>
-            </a>
-        </div>
-    </div>
-    <!-- ===========End character cards ==========-->
 
     <!-- ========== Start Footer ============== -->
     <div class="footer">
