--- a/tour.html
+++ b/tour.html
@@ -42,8 +42,8 @@
     <div class="container-fluid">
         <div class="row justify-content-md-center">
             <div class="col-md-auto">
-                <div class="logo justify-content-center">
-                    <a href="index.html"></a><img src="Assets/Logo.png" alt="" srcset="" width="100%" height="100%">
+                <div class="logo justify-content-center"><a href="index.html"> <img src="Assets/Logo.png" alt=""
+                            srcset="" width="100%" height="100%"></a>
                 </div>
             </div>
         </div>
@@ -82,10 +82,10 @@
                 </div>
             </a>
 
-            <a href="">
+            <a href="/Inner Pages/music.html">
                 <div class="col mx-auto">
                     <div class="card text-white border-0">
-                        <img src="/Assets/character-card.png" class="card-img" alt="...">
+                        <img src="/Assets/music-card.png" class="card-img" alt="...">
                         <div class="card-img-overlay">
                             <!-- <h5 class="card-title">Card title</h5>
                         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
@@ -96,19 +96,19 @@
                 </div>
             </a>
 
-            <a href="">
+            <!-- <a href="">
                 <div class="col mx-auto">
                     <div class="card text-white border-0">
                         <img src="/Assets/character-card.png" class="card-img" alt="...">
                         <div class="card-img-overlay">
-                            <!-- <h5 class="card-title">Card title</h5>
+                            <h5 class="card-title">Card title</h5>
                         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
                             additional content. This content is a little bit longer.</p>
-                        <p class="card-text">Last updated 3 mins ago</p> -->
+                        <p class="card-text">Last updated 3 mins ago</p>
                         </div>
                     </div>
                 </div>
-            </a>
+            </a> -->
         </div>
     </div>
     <!-- ===========End character cards ==========-->
