--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 </div>
                 <div class="carousel-item">
                     <div class="container">
-                        <h1 class="fashion_taital">Our Other Products</h1>
+                        <h1 class="fashion_taital">Our Products</h1>
                         <div class="fashion_section_2">
                             <div class="row justify-content-md-center">
                                 <div class="col-6 col-md-4">
