--- a/tour.html
+++ b/tour.html
@@ -51,7 +51,7 @@
     <!--================ End Header Area =================-->
 
     <!-- ========== Start video player ========-->
-    <div class="container">
+    <!-- <div class="container">
         <div class="row">
             <div class="col-4" align="right">
                 <video width="420" height="240" autoplay muted class="tourVideo">
@@ -62,7 +62,7 @@
 
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- ========== End video player ========-->
 
     <!--=========== Start character cards ========-->
