--- a/tour.html
+++ b/tour.html
@@ -96,19 +96,19 @@
                 </div>
             </a>
 
-            <!-- <a href="">
+            <a href="">
                 <div class="col mx-auto">
                     <div class="card text-white border-0">
-                        <img src="/Assets/character-card.png" class="card-img" alt="...">
+                        <img src="/Assets/library-card.png" class="card-img" alt="...">
                         <div class="card-img-overlay">
-                            <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                            additional content. This content is a little bit longer.</p>
-                        <p class="card-text">Last updated 3 mins ago</p>
+                            <!-- <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                            <p class="card-text">Last updated 3 mins ago</p> -->
                         </div>
                     </div>
                 </div>
-            </a> -->
+            </a>
         </div>
     </div>
     <!-- ===========End character cards ==========-->
