--- a/index.html
+++ b/index.html
@@ -69,16 +69,20 @@
     <!--========== Start Sidebar ==========-->
     <div class="s-soft" id="right">
         <a href="/" class="s-item facebook">
-            <span class="fa fa-facebook"></span>
+            <!-- <span class="fa fa-facebook"></span> -->
+            <img src="/Assets/facebook.png" alt="" srcset="" width="100%" height="100%">
         </a>
         <a href="/" class="s-item twitter">
-            <span class="fa fa-twitter"></span>
+            <!-- <span class="fa fa-twitter"></span> -->
+            <img src="/Assets/youtube.png" alt="" srcset="" width="100%" height="100%">
         </a>
         <a href="/" class="s-item linkedin">
-            <span class="fa fa-linkedin"></span>
+            <!-- <span class="fa fa-linkedin"></span> -->
+            <img src="/Assets/linkdin.png" alt="" srcset="" width="100%" height="100%">
         </a>
         <a href="/" class="s-item instagram">
-            <span class="fa fa-instagram"></span>
+            <!-- <span class="fa fa-instagram"></span> -->
+            <img src="/Assets/whatsapp.png" alt="" srcset="" width="100%" height="100%">
         </a>
     </div>
 
