--- a/Inner Pages/library.html
+++ b/Inner Pages/library.html
@@ -36,9 +36,49 @@
 
     <!-- ========Main Sheets============= -->
     <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="/css/library.css">
 </head>
 
 <body>
+    <!--================ Start Header Area =================-->
+    <div class="container-fluid">
+        <div class="row justify-content-md-center">
+            <div class="col-md-auto">
+                <div class="logo justify-content-center">
+                    <a href="index.html"> <img src="/Assets/Logo.png" alt="" srcset="" width="100%" height="100%"></a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--================ End Header Area =================-->
+
+    <!-- ============== Start Landing Page ============ -->
+    <div class="container-fluid">
+        <div class="row library-img">
+            <img src="/Assets/library-landing-page.png" alt="" srcset="" width="100%" height="100%">
+        </div>
+    </div>
+    <!-- ============== End Landing Page ============ -->
+
+    <!--============= Start Pricing Section ============= -->
+    <div class="container">
+        <div class="row row-cols-4">
+            <div class="col">
+                <img src="/Assets/Asset 5-8.png" alt="" srcset="" width="100%" height="auto">
+            </div>
+
+            <div class="col">
+                <img src="/Assets/knowledge card.png" alt="" srcset="" width="100%" height="auto">
+            </div>
+            <div class="col">
+                <img src="/Assets/knowledge card.png" alt="" srcset="" width="100%" height="auto">
+            </div>
+            <!-- <div class="col-4 col-lg-2">
+                <img src="/Assets/knowledge card.png" alt="" srcset="" width="100%" height="auto">
+            </div> -->
+        </div>
+    </div>
+    <!--============= End Pricing Section ============= -->
 
 </body>
 
