--- a/tour.html
+++ b/tour.html
@@ -96,7 +96,7 @@
                 </div>
             </a>
 
-            <a href="">
+            <a href="/Inner Pages/library.html">
                 <div class="col mx-auto">
                     <div class="card text-white border-0">
                         <img src="/Assets/library-card.png" class="card-img" alt="...">
