--- a/Inner Pages/library.html
+++ b/Inner Pages/library.html
@@ -62,20 +62,23 @@
 
     <!--============= Start Pricing Section ============= -->
     <div class="container">
-        <div class="row row-cols-4">
+        <div class="row">
             <div class="col">
-                <img src="/Assets/Asset 5-8.png" alt="" srcset="" width="100%" height="auto">
+                <img src="/Assets/library card pricing final.png" alt="" srcset="" width="100%" height="auto">
             </div>
 
-            <div class="col">
+            <!-- <div class="col">
                 <img src="/Assets/knowledge card.png" alt="" srcset="" width="100%" height="auto">
             </div>
             <div class="col">
                 <img src="/Assets/knowledge card.png" alt="" srcset="" width="100%" height="auto">
-            </div>
+            </div> -->
             <!-- <div class="col-4 col-lg-2">
                 <img src="/Assets/knowledge card.png" alt="" srcset="" width="100%" height="auto">
             </div> -->
+        </div>
+        <div class="row">
+            <img src="/Assets/Asset 7-8.png" alt="" srcset="">
         </div>
     </div>
     <!--============= End Pricing Section ============= -->
