--- a/Inner Pages/music.html
+++ b/Inner Pages/music.html
@@ -48,7 +48,7 @@
         <div class="row justify-content-md-center">
             <div class="col-md-auto">
                 <div class="logo justify-content-center">
-                    <a href="index.html"> <img src="/Assets/Logo.png" alt="" srcset="" width="100%" height="100%"></a>
+                    <a href="/index.html"> <img src="/Assets/Logo.png" alt="" srcset="" width="100%" height="100%"></a>
                 </div>
             </div>
         </div>
