footer removed from inner pages

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <!--====== End Sidebar ========-->
 
     <!--====== Start Library section =========-->
-    <div class="fashion_section">
+    <!-- <div class="fashion_section">
         <div id="electronic_main_slider" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
@@ -190,12 +190,12 @@
                 </div>
 
             </div>
-            <!-- <a class="carousel-control-prev" href="#electronic_main_slider" role="button" data-slide="prev">
+            <a class="carousel-control-prev" href="#electronic_main_slider" role="button" data-slide="prev">
                 <i class="fa fa-angle-left"></i>
             </a>
             <a class="carousel-control-next" href="#electronic_main_slider" role="button" data-slide="next">
                 <i class="fa fa-angle-right"></i>
-            </a> -->
+            </a>
         </div>
     </div>
 
@@ -207,13 +207,13 @@
         function closeNav() {
             document.getElementById("mySidenav").style.width = "0";
         }
-    </script>
+    </script> -->
 
     <!--========== End Library section ============-->
 
     <!-- ===========Start Take a tour ===========-->
     <div class="container">
-        <div class="col mx-auto" align="center">
+        <div class="col mx-auto tour-button" align="center">
             <a href="/tour.html"><img src="/Assets/take a tour button.png" alt="" srcset=""></a>
         </div>
     </div>
