--- a/characterSheet.html
+++ b/characterSheet.html
@@ -94,7 +94,7 @@
 
 
     <!-- ========== Start Footer ============== -->
-    <div class="footer">
+    <!-- <div class="footer">
         <footer>
             <div class="container">
                 <div class="row">
@@ -136,7 +136,7 @@
                     </li>
                 </ul>
             </div>
-    </div>
+    </div> -->
     <!-- ========== End Footer ============== -->
 </body>
 
