--- a/index.html
+++ b/index.html
@@ -58,9 +58,10 @@
     <div class="container-fluid landing-page">
         <div class="row justify-content-md-center">
             <div class="hero"><img src="Assets/home_without_logo.png" alt="" srcset="" width="100%" height="100%">
-                <p class="sub-text carousel-caption">Welcome To</p>
+
                 <img src="Assets/typography_toonland_white.png" alt="" srcset="" width="100%" height="100%"
                     class="logo-typo carousel-caption justify-content-md-center mx-auto">
+                <p class="sub-text carousel-caption">Welcomes you</p>
             </div>
         </div>
     </div>
@@ -224,27 +225,27 @@
         <footer>
             <div class="container">
                 <div class="row">
-                    <div class="col item text">
+                    <!-- <div class="col item text">
                         <h3>Why did we start Toonland?</h3>
                         <h3>Message from CEO</h3>
-                    </div>
+                    </div> -->
                     <div class="col-6 item text mx-auto">
                         <div class="powered mx-auto" align="center">
                             <h3>Brand powered by</h3>
                             <img src="/Assets/propelling logo.png " alt=" " srcset=" " width="100% " height="100% ">
-                            <div class="item social mx-auto ">
+                            <!-- <div class="item social mx-auto ">
                                 <a href="# "><i class="icon ion-social-facebook "></i></a>
                                 <a href="# "><i class="icon ion-social-twitter "></i></a>
                                 <a href="# "><i class="icon ion-social-snapchat "></i></a>
                                 <a href="# "><i class="icon ion-social-instagram "></i></a>
-                            </div>
+                            </div> -->
                             <p class="copyright ">&#169;Toonland 2022 all rights reserved.</p>
                         </div>
                     </div>
                     <div class="col"></div>
                 </div>
             </div>
-            <div class="links mx-auto" align="center">
+            <!-- <div class="links mx-auto" align="center">
                 <ul>
                     <li id="music">
                         <h3>
@@ -261,7 +262,7 @@
                         <h3><a href="#">Toonland Treasure</a> </h3>
                     </li>
                 </ul>
-            </div>
+            </div> -->
     </div>
     <!-- ========== End Footer ============== -->
 
