footers changed/romoved

--- a/index.html
+++ b/index.html
@@ -229,10 +229,10 @@
                         <h3>Why did we start Toonland?</h3>
                         <h3>Message from CEO</h3>
                     </div> -->
-                    <div class="col-6 item text mx-auto">
+                    <div class="col item text">
                         <div class="powered mx-auto" align="center">
                             <h3>Brand powered by</h3>
-                            <img src="/Assets/propelling logo.png " alt=" " srcset=" " width="100% " height="100% ">
+                            <img src="/Assets/Propelling story-8.png " alt=" " srcset="" width="0.1rem">
                             <!-- <div class="item social mx-auto ">
                                 <a href="# "><i class="icon ion-social-facebook "></i></a>
                                 <a href="# "><i class="icon ion-social-twitter "></i></a>
@@ -242,7 +242,7 @@
                             <p class="copyright ">&#169;Toonland 2022 all rights reserved.</p>
                         </div>
                     </div>
-                    <div class="col"></div>
+
                 </div>
             </div>
             <!-- <div class="links mx-auto" align="center">
