--- a/tour.html
+++ b/tour.html
@@ -109,12 +109,26 @@
                     </div>
                 </div>
             </a>
+
+            <a href="/Inner Pages/theatre.html">
+                <div class="col mx-auto">
+                    <div class="card text-white border-0">
+                        <img src="/Assets/theatre-card.png" class="card-img" alt="...">
+                        <div class="card-img-overlay">
+                            <!-- <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                            <p class="card-text">Last updated 3 mins ago</p> -->
+                        </div>
+                    </div>
+                </div>
+            </a>
         </div>
     </div>
     <!-- ===========End character cards ==========-->
 
     <!-- ========== Start Footer ============== -->
-    <div class="footer">
+    <!-- <div class="footer">
         <footer>
             <div class="container">
                 <div class="row">
@@ -156,7 +170,7 @@
                     </li>
                 </ul>
             </div>
-    </div>
+    </div> -->
     <!-- ========== End Footer ============== -->
 </body>
 
