theater page created

--- a/Inner Pages/theatre.html
+++ b/Inner Pages/theatre.html
@@ -36,6 +36,7 @@
 
     <!-- ========Main Sheets============= -->
     <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="/css/theatre.css">
 </head>
 
 <body>
@@ -50,6 +51,28 @@
         </div>
     </div>
     <!--================ End Header Area =================-->
+
+
+    <!--=============Start Theatre Area ============= -->
+    <div class="container">
+        <div class="row">
+            <img src="/Assets/theatre-landing-page.png" alt="" srcset="" width="100%" height="100%">
+
+        </div>
+    </div>
+    <!--=============End Theatre Area ============= -->
+
+    <!--============= Start youtube video  =============-->
+    <div class="main-video">
+        <h4 align="center">Watch our latest Video</h4>
+        <iframe width="364" height="202" src="https://www.youtube.com/embed/LG8brAlJXpk" frameborder="10">
+        </iframe>
+    </div>
+
+    <!--============= End youtube video  =============-->
+
+
+
 </body>
 
 </html>
