--- a/Inner Pages/theatre.html
+++ b/Inner Pages/theatre.html
@@ -65,11 +65,62 @@
     <!--============= Start youtube video  =============-->
     <div class="main-video">
         <h4 align="center">Watch our latest Video</h4>
-        <iframe width="364" height="202" src="https://www.youtube.com/embed/LG8brAlJXpk" frameborder="10">
-        </iframe>
+        <iframe width="364" height="202" src="https://www.youtube.com/embed/LG8brAlJXpk?&autoplay=1&mute=1"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen></iframe>
     </div>
 
     <!--============= End youtube video  =============-->
+
+    <!--============= Start Video Section ============-->
+    <div class="container video-section">
+        <div class="row justify-content-center">
+            <h4>
+                Watch our videos
+            </h4>
+        </div>
+        <div class="row row-cols-auto">
+            <div class="col-4">
+                <iframe width="364" height="202" src="https://www.youtube.com/embed/LG8brAlJXpk"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
+            </div>
+            <div class="col-4">
+                <iframe width="364" height="202" src="https://www.youtube.com/embed/LG8brAlJXpk"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
+            </div>
+            <div class="col-4">
+                <iframe width="364" height="202" src="https://www.youtube.com/embed/LG8brAlJXpk"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
+            </div>
+            <div class="col-4">
+                <iframe width="364" height="202" src="https://www.youtube.com/embed/LG8brAlJXpk"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
+            </div>
+            <div class="col-4">
+                <iframe width="364" height="202" src="https://www.youtube.com/embed/LG8brAlJXpk"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
+            </div>
+            <div class="col-4">
+                <iframe width="364" height="202" src="https://www.youtube.com/embed/LG8brAlJXpk"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
+            </div>
+        </div>
+    </div>
+
+    <!--============= End Video Section ============-->
 
 
 
