--- a/index.html
+++ b/index.html
@@ -223,28 +223,28 @@
     <!-- ========== Start Footer ============== -->
     <div class="footer">
         <footer>
-            <div class="container">
-                <div class="row">
-                    <!-- <div class="col item text">
+            <!-- <div class="container">
+                <div class="row"> -->
+            <!-- <div class="col item text">
                         <h3>Why did we start Toonland?</h3>
                         <h3>Message from CEO</h3>
                     </div> -->
-                    <div class="col item text">
+            <!-- <div class="col">
                         <div class="powered mx-auto" align="center">
                             <h3>Brand powered by</h3>
-                            <img src="/Assets/Propelling story-8.png " alt=" " srcset="" width="0.1rem">
-                            <!-- <div class="item social mx-auto ">
+                            <img src="/Assets/Propelling story-8.png " alt=" " srcset="" width="100%" height="100%"> -->
+            <!-- <div class="item social mx-auto ">
                                 <a href="# "><i class="icon ion-social-facebook "></i></a>
                                 <a href="# "><i class="icon ion-social-twitter "></i></a>
                                 <a href="# "><i class="icon ion-social-snapchat "></i></a>
                                 <a href="# "><i class="icon ion-social-instagram "></i></a>
                             </div> -->
-                            <p class="copyright ">&#169;Toonland 2022 all rights reserved.</p>
+            <!-- <p class="copyright ">&#169;Toonland 2022 all rights reserved.</p>
                         </div>
                     </div>
 
                 </div>
-            </div>
+            </div> -->
             <!-- <div class="links mx-auto" align="center">
                 <ul>
                     <li id="music">
@@ -263,6 +263,28 @@
                     </li>
                 </ul>
             </div> -->
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <p align="center">Powered By <br>
+                            <a href="http://propellingstories.com/">
+                                <img src="/Assets/propelling logo.png" alt="" srcset="" width="170rem" height="auto"
+                                    align="center">
+                            </a>
+                        </p>
+                    </div>
+
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <p class="copyright ">&#169;Toonland 2022 all rights reserved.</p>
+                    </div>
+
+                </div>
+
+            </div>
+    </div>
+    </footer>
     </div>
     <!-- ========== End Footer ============== -->
 
