--- a/Inner Pages/theatre.html
+++ b/Inner Pages/theatre.html
@@ -77,7 +77,7 @@
     <div class="container video-section">
         <div class="row justify-content-center">
             <h4>
-                Watch our videos
+                Watch & Enjoy videos on our Team, Blooopers, Trailers, Short Films, and Music Videos
             </h4>
         </div>
         <div class="row row-cols-auto">
