--- a/index.html
+++ b/index.html
@@ -266,10 +266,10 @@
             <div class="container">
                 <div class="row">
                     <div class="col">
-                        <p align="center">Powered By <br>
+                        <p class="powered">Powered By <br>
                             <a href="http://propellingstories.com/">
                                 <img src="/Assets/propelling logo.png" alt="" srcset="" width="170rem" height="auto"
-                                    align="center">
+                                   >
                             </a>
                         </p>
                     </div>
@@ -277,7 +277,7 @@
                 </div>
                 <div class="row">
                     <div class="col">
-                        <p class="copyright ">&#169;Toonland 2022 all rights reserved.</p>
+                        <p class="copyright ">&#169;Toonland 2022<br> all rights reserved.</p>
                     </div>
 
                 </div>
