hero image changed

--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
     <!--========== Start Main Landing Area ================-->
     <div class="container-fluid landing-page">
         <div class="row justify-content-md-center">
-            <div class="hero"><img src="Assets/home_without_logo.png" alt="" srcset="" width="100%" height="100%">
+            <div class="hero"><img src="Assets/hero-image-home-page-v2.jpg" alt="" srcset="" width="100%" height="100%">
 
-                <img src="Assets/typography_toonland_white.png" alt="" srcset="" width="100%" height="100%"
-                    class="logo-typo carousel-caption justify-content-md-center mx-auto">
-                <p class="sub-text carousel-caption">Welcomes you</p>
+                <!-- <img src="Assets/typography_toonland_white.png" alt="" srcset="" width="100%" height="100%"
+                    class="logo-typo carousel-caption justify-content-md-center mx-auto"> -->
+                <!-- <p class="sub-text carousel-caption">Welcomes you</p> -->
             </div>
         </div>
     </div>
@@ -215,7 +215,8 @@
     <!-- ===========Start Take a tour ===========-->
     <div class="container">
         <div class="col mx-auto tour-button" align="center">
-            <a href="/tour.html"><img src="/Assets/take a tour button.png" alt="" srcset=""></a>
+            <a href="/tour.html"><img src="/Assets/take a tour buttonv2.png" alt="" srcset="" width="100%"
+                    height="100%"></a>
         </div>
     </div>
     <!-- ===========End Take a tour ===========-->
@@ -268,8 +269,7 @@
                     <div class="col">
                         <p class="powered">Powered By <br>
                             <a href="http://propellingstories.com/">
-                                <img src="/Assets/propelling logo.png" alt="" srcset="" width="170rem" height="auto"
-                                   >
+                                <img src="/Assets/propelling logo.png" alt="" srcset="" width="170rem" height="auto">
                             </a>
                         </p>
                     </div>
