--- a/index.html
+++ b/index.html
@@ -213,8 +213,8 @@
     <!--========== End Library section ============-->
 
     <!-- ===========Start Take a tour ===========-->
-    <div class="container">
-        <div class="col mx-auto tour-button" align="center">
+    <div class="container" align="center">
+        <div class="col mx-auto tour-button">
             <a href="/tour.html"><img src="/Assets/take a tour buttonv2.png" alt="" srcset="" width="100%"
                     height="100%"></a>
         </div>
