Home Page Mobile version
test 2

--- a/index.html
+++ b/index.html
@@ -278,20 +278,21 @@
             <div class="container">
                 <div class="row">
                     <div class="col">
-                        <p class="powered">Powered By <br>
-                            <a href="http://propellingstories.com/">
+                        <p class="powered">
+                            <!-- Powered By <br> -->
+                            <!-- <a href="http://propellingstories.com/">
                                 <img src="/Assets/propelling logo.png" alt="" srcset="" width="170rem" height="auto">
-                            </a>
+                            </a> -->
                         </p>
                     </div>
 
                 </div>
-                <div class="row">
+                <!-- <div class="row">
                     <div class="col">
                         <p class="copyright ">&#169;Toonland 2022<br> all rights reserved.</p>
                     </div>
 
-                </div>
+                </div> -->
 
             </div>
 
