--- a/tour.html
+++ b/tour.html
@@ -42,7 +42,7 @@
     <div class="container-fluid">
         <div class="row justify-content-md-center" align="center">
             <div class="col-md-auto">
-                <div class="logo justify-content-center"><a href="index.html"> <img src="Assets/Logo.png" alt=""
+                <div class="logo justify-content-center"><a href="/index.html"> <img src="/Assets/Logo.png" alt=""
                             srcset="" width="100%" height="100%"></a>
                 </div>
             </div>
@@ -129,6 +129,20 @@
                 <div class="col mx-auto">
                     <div class="card text-white border-0">
                         <img src="/Assets/comic-card.png" class="card-img" alt="...">
+                        <div class="card-img-overlay">
+                            <!-- <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                            <p class="card-text">Last updated 3 mins ago</p> -->
+                        </div>
+                    </div>
+                </div>
+            </a>
+
+            <a href="/Inner Pages/quiz.html">
+                <div class="col mx-auto">
+                    <div class="card text-white border-0">
+                        <img src="/Assets/quiz-card.png" class="card-img" alt="...">
                         <div class="card-img-overlay">
                             <!-- <h5 class="card-title">Card title</h5>
                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
