Header image removed

--- a/Inner Pages/Comic.html
+++ b/Inner Pages/Comic.html
@@ -39,7 +39,7 @@
 
 <body>
     <!--================ Start Header Area =================-->
-    <div class="container-fluid">
+    <!-- <div class="container-fluid">
         <div class="row justify-content-md-center">
             <div class="col-md-auto">
                 <div class="logo justify-content-center"><a href="/index.html"> <img src="/Assets/Logo.png" alt=""
@@ -47,7 +47,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!--================ End Header Area =================-->
 
     <!--================ Start Comic landing page ============-->
