--- a/Inner Pages/music.html
+++ b/Inner Pages/music.html
@@ -44,7 +44,7 @@
 <body>
 
     <!--================ Start Header Area =================-->
-    <div class="container-fluid">
+    <!-- <div class="container-fluid">
         <div class="row justify-content-md-center">
             <div class="col-md-auto">
                 <div class="logo justify-content-center">
@@ -52,7 +52,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!--================ End Header Area =================-->
 
     <!-- ==============Start landing page =============== -->
