--- a/Inner Pages/theatre.html
+++ b/Inner Pages/theatre.html
@@ -41,7 +41,7 @@
 
 <body>
     <!--================ Start Header Area =================-->
-    <div class="container-fluid">
+    <!-- <div class="container-fluid">
         <div class="row justify-content-md-center">
             <div class="col-md-auto">
                 <div class="logo justify-content-center">
@@ -49,7 +49,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!--================ End Header Area =================-->
 
 
